--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "click>=8.0",
     "pyyaml>=6.0",
     "httpx>=0.25",
+    "langfuse>=2.0",
 ]
 
 [project.optional-dependencies]
